--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: lk-itween's blogs!
-description: lk-itween在github Pages上设置的博客
+description: lk-itween的博客！
 github_username: lk-itween  # 你的用户名
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "lk-itween/lk-itween.github.io" #你的仓库名
